[project]
name = "tool-seo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "huyhieublock", email = "huy.hieu@blockodyssey.io" }
]
dependencies = [
    "selenium>=4.26.1",
    "opencv-python>=4.10.0.84",
    "numpy>=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tool_seo"]
